Implementada preprocesado para la funcion credito para que los individuos sean de longitud al L al elegir esa funcion